2010-04-10  Chris Morley

	* CMakeLists.txt: ensure output compression not enabled for MSVC
	(as for previous build system).

	* src/CMakeLists.txt: remove ops.cpp (which had nothing useful left
	in it) and add xout.cpp. Add plugin_charges obf project for MSVC.
	
	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
	add doc folder; delete MS distributables installer when it has been
	run; add sdf.bat; add obdepict.bat and put on context menu;
	add firefox	to path so GUI and obdepict can use it.
	
	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add optional display of
	chemical structures in firefox (or other external program),
	using a new op xout.

	* windows-vc2008/Distribution/NSISScriptToCreateInstallerOBF.nsi
	deleted
	
2010-04-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/partialcharge.h, src/partialcharges.cpp,
	src/charges/: New plugin type to assign partial charges. First
	examples are MMFF94 and Gasteiger. Nothing new, but more to come.

2010-04-07  Chris Morley

	* src/formats/fingerprintformat.cpp: add option to output
	hexadecimal fingerprints only, as requested by Francesco Napolitano. 

2010-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (findFiles): Don't split on tabs or
	spaces. These are legal characters for directories. (This causes
	problems with Mac users in particular.)

2010-04-04 Chris Morley

	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add a scrollbar on the options
	panel, so that the GUI can be used with wide, shallow windows (an
	unfortunate current fashion).

2010-04-01 Chris Morley

	* windows-vc2008: Add new Distribution folder and copy the external
	dlls and libs. Rewrite Windows installer for CMake VC2008 build.
	Uses more wild cards and so should be less prone to omissions.
	Folders windows-vc2005 and windowsOBF will be deleted, but have not
	been yet.	

2010-03-29  Geoffrey Hutchison  <babel@geoffhutchison.net>
