@@ -16,47 +16,63 @@ namespace OpenBabel
 {
 static const char AtomTypeData[] = {
  0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x44,0x34,0x5D,0x20,0x33,0x20,0x23,
- 0x61,0x6E,0x79,0x20,0x34,0x20,0x76,0x61,0x6C,0x65,0x6E,0x74,0x20,0x61,0x74,
- 0x6F,0x6D,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x43,0x5D,0x20,0x33,
- 0x20,0x23,0x73,0x70,0x33,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,
- 0x54,0x48,0x59,0x42,0x20,0x5B,0x63,0x2C,0x24,0x28,0x43,0x3D,0x2A,0x29,0x5D,
- 0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,
- 0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x24,0x28,0x5B,0x23,0x36,0x5D,0x28,
- 0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x5D,
- 0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,
- 0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x24,0x28,0x43,0x23,0x2A,0x29,0x2C,
- 0x24,0x28,0x43,0x28,0x3D,0x2A,0x29,0x3D,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,
- 0x73,0x70,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,
- 0x42,0x20,0x5B,0x4E,0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x6E,0x69,
- 0x74,0x72,0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,
- 0x6E,0x2C,0x24,0x28,0x4E,0x3D,0x2A,0x29,0x2C,0x24,0x28,0x4E,0x5B,0x23,0x36,
- 0x2C,0x23,0x37,0x2C,0x23,0x38,0x5D,0x3D,0x2C,0x3A,0x2C,0x23,0x2A,0x29,0x5D,
- 0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x6E,0x69,0x74,0x72,0x6F,0x67,0x65,
- 0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x4E,0x44,0x31,0x2C,0x4E,
- 0x44,0x32,0x2C,0x4E,0x44,0x33,0x5D,0x61,0x20,0x32,0x20,0x23,0x73,0x70,0x32,
- 0x20,0x6E,0x69,0x74,0x72,0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,
- 0x42,0x20,0x5B,0x24,0x28,0x4E,0x23,0x2A,0x29,0x2C,0x24,0x28,0x5B,0x4E,0x44,
- 0x32,0x5D,0x28,0x3D,0x2A,0x29,0x3D,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,0x73,
- 0x70,0x20,0x6E,0x69,0x74,0x72,0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,
- 0x59,0x42,0x20,0x5B,0x4F,0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x6F,
- 0x78,0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x6F,
- 0x2C,0x24,0x28,0x4F,0x3D,0x2A,0x29,0x2C,0x24,0x28,0x4F,0x5B,0x23,0x36,0x2C,
- 0x23,0x37,0x2C,0x23,0x38,0x5D,0x3D,0x2C,0x3A,0x2A,0x29,0x5D,0x20,0x32,0x20,
- 0x23,0x73,0x70,0x32,0x20,0x6F,0x78,0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,
- 0x48,0x59,0x42,0x20,0x5B,0x24,0x28,0x5B,0x23,0x38,0x44,0x31,0x5D,0x5B,0x23,
- 0x36,0x5D,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,
- 0x70,0x32,0x20,0x6F,0x78,0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,
- 0x42,0x20,0x5B,0x24,0x28,0x4F,0x23,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,0x73,
- 0x70,0x20,0x6F,0x78,0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,
- 0x20,0x5B,0x50,0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x70,0x68,0x6F,
- 0x73,0x70,0x68,0x6F,0x72,0x75,0x73,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,
- 0x5B,0x23,0x31,0x35,0x3B,0x24,0x28,0x5B,0x50,0x44,0x31,0x5D,0x3D,0x2A,0x29,
- 0x5D,0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x70,0x68,0x6F,0x73,0x70,0x68,
- 0x6F,0x72,0x75,0x73,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x53,0x5D,
- 0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x73,0x75,0x6C,0x66,0x75,0x72,0x0A,
- 0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x23,0x31,0x36,0x3B,0x73,0x2C,0x24,
- 0x28,0x5B,0x53,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,
- 0x70,0x32,0x20,0x73,0x75,0x6C,0x66,0x75,0x72,0x0A,0x49,0x4E,0x54,0x48,0x59,
+ 0x61,0x6E,0x79,0x20,0x34,0x2D,0x76,0x61,0x6C,0x65,0x6E,0x74,0x20,0x61,0x74,
+ 0x6F,0x6D,0x20,0x2D,0x2D,0x20,0x74,0x65,0x74,0x72,0x61,0x68,0x65,0x64,0x72,
+ 0x61,0x6C,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x44,0x35,0x5D,0x20,
+ 0x35,0x20,0x23,0x61,0x6E,0x79,0x20,0x35,0x2D,0x76,0x61,0x6C,0x65,0x6E,0x74,
+ 0x20,0x61,0x74,0x6F,0x6D,0x20,0x2D,0x2D,0x20,0x74,0x72,0x69,0x67,0x62,0x69,
+ 0x70,0x79,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x44,0x36,0x5D,0x20,
+ 0x36,0x20,0x23,0x61,0x6E,0x79,0x20,0x36,0x2D,0x76,0x61,0x6C,0x65,0x6E,0x74,
+ 0x20,0x61,0x74,0x6F,0x6D,0x20,0x2D,0x2D,0x20,0x6F,0x63,0x74,0x0A,0x49,0x4E,
+ 0x54,0x48,0x59,0x42,0x20,0x5B,0x43,0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,
+ 0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,
+ 0x5B,0x63,0x2C,0x24,0x28,0x43,0x3D,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,
+ 0x70,0x32,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,
+ 0x42,0x20,0x5B,0x24,0x28,0x5B,0x23,0x36,0x5D,0x28,0x5B,0x23,0x38,0x44,0x31,
+ 0x5D,0x29,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,
+ 0x70,0x32,0x20,0x63,0x61,0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,
+ 0x42,0x20,0x5B,0x24,0x28,0x43,0x23,0x2A,0x29,0x2C,0x24,0x28,0x43,0x28,0x3D,
+ 0x2A,0x29,0x3D,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,0x73,0x70,0x20,0x63,0x61,
+ 0x72,0x62,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x4E,0x5D,
+ 0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x6E,0x69,0x74,0x72,0x6F,0x67,0x65,
+ 0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x6E,0x2C,0x24,0x28,0x4E,
+ 0x3D,0x2A,0x29,0x2C,0x24,0x28,0x4E,0x5B,0x23,0x36,0x2C,0x23,0x37,0x2C,0x23,
+ 0x38,0x5D,0x3D,0x2C,0x3A,0x2C,0x23,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,
+ 0x70,0x32,0x20,0x6E,0x69,0x74,0x72,0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,
+ 0x48,0x59,0x42,0x20,0x5B,0x4E,0x44,0x31,0x2C,0x4E,0x44,0x32,0x2C,0x4E,0x44,
+ 0x33,0x5D,0x61,0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x6E,0x69,0x74,0x72,
+ 0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x24,0x28,
+ 0x4E,0x23,0x2A,0x29,0x2C,0x24,0x28,0x5B,0x4E,0x44,0x32,0x5D,0x28,0x3D,0x2A,
+ 0x29,0x3D,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,0x73,0x70,0x20,0x6E,0x69,0x74,
+ 0x72,0x6F,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x4F,
+ 0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x6F,0x78,0x79,0x67,0x65,0x6E,
+ 0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x6F,0x2C,0x24,0x28,0x4F,0x3D,
+ 0x2A,0x29,0x2C,0x24,0x28,0x4F,0x5B,0x23,0x36,0x2C,0x23,0x37,0x2C,0x23,0x38,
+ 0x5D,0x3D,0x2C,0x3A,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,
+ 0x6F,0x78,0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,
+ 0x24,0x28,0x5B,0x23,0x38,0x44,0x31,0x5D,0x5B,0x23,0x36,0x5D,0x5B,0x23,0x38,
+ 0x44,0x31,0x5D,0x29,0x5D,0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x6F,0x78,
+ 0x79,0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x24,0x28,
+ 0x4F,0x23,0x2A,0x29,0x5D,0x20,0x31,0x20,0x23,0x73,0x70,0x20,0x6F,0x78,0x79,
+ 0x67,0x65,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x50,0x5D,0x20,
+ 0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x70,0x68,0x6F,0x73,0x70,0x68,0x6F,0x72,
+ 0x75,0x73,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x23,0x31,0x35,0x3B,
+ 0x24,0x28,0x5B,0x50,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,
+ 0x73,0x70,0x32,0x20,0x70,0x68,0x6F,0x73,0x70,0x68,0x6F,0x72,0x75,0x73,0x0A,
+ 0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x50,0x44,0x35,0x5D,0x09,0x09,0x09,
+ 0x20,0x35,0x09,0x20,0x23,0x73,0x70,0x33,0x64,0x20,0x70,0x68,0x6F,0x73,0x70,
+ 0x68,0x6F,0x72,0x75,0x73,0x2C,0x20,0x61,0x73,0x20,0x69,0x6E,0x20,0x50,0x46,
+ 0x35,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x50,0x76,0x35,0x5D,0x09,
+ 0x09,0x09,0x20,0x35,0x09,0x20,0x23,0x73,0x70,0x33,0x64,0x20,0x70,0x68,0x6F,
+ 0x73,0x70,0x68,0x6F,0x72,0x75,0x73,0x2C,0x20,0x61,0x73,0x20,0x69,0x6E,0x20,
+ 0x48,0x33,0x50,0x4F,0x34,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x53,
+ 0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x73,0x75,0x6C,0x66,0x75,0x72,
+ 0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x23,0x31,0x36,0x3B,0x73,0x2C,
+ 0x24,0x28,0x5B,0x53,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x20,0x32,0x20,0x23,
+ 0x73,0x70,0x32,0x20,0x73,0x75,0x6C,0x66,0x75,0x72,0x0A,0x49,0x4E,0x54,0x48,
+ 0x59,0x42,0x20,0x5B,0x53,0x44,0x36,0x5D,0x09,0x09,0x09,0x20,0x36,0x09,0x20,
+ 0x23,0x73,0x70,0x33,0x64,0x32,0x20,0x73,0x75,0x6C,0x66,0x75,0x72,0x2C,0x20,
+ 0x61,0x73,0x20,0x69,0x6E,0x20,0x53,0x46,0x36,0x0A,0x49,0x4E,0x54,0x48,0x59,
  0x42,0x20,0x5B,0x42,0x5D,0x20,0x32,0x20,0x23,0x73,0x70,0x32,0x20,0x62,0x6F,
  0x72,0x6F,0x6E,0x0A,0x49,0x4E,0x54,0x48,0x59,0x42,0x20,0x5B,0x42,0x44,0x34,
  0x5D,0x20,0x33,0x20,0x23,0x73,0x70,0x33,0x20,0x62,0x6F,0x72,0x6F,0x6E,0x0A,
