@@ -42,6 +42,8 @@ namespace OpenBabel
     Returns false if none are successful.
     */
 
+    obErrorLog.ThrowError(__FUNCTION__, "Alias " + _alias + "Parsing Alias.", obError);
+
     //parse as isotopic atom
     if(isdigit(_alias[0]))
     {
@@ -62,6 +64,8 @@ namespace OpenBabel
 
     if(FromNameLookup(mol, atomindex))
       return true;
+
+    obErrorLog.ThrowError(__FUNCTION__, "Alias " + _alias + " Trying formula parsing.", obWarning, onceOnly);
 
     if(!FormulaParse(mol, atomindex))
     {
