@@ -1,3 +1,8 @@
+2010-04-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* data/element.h, data/atomtyp.h: Regenerate. Need to add CMake
+	targets for these.
+
 2010-04-10  Chris Morley
 
 	* CMakeLists.txt: ensure output compression not enabled for MSVC
